Iniciado a codificação do JS

--- a/index.html
+++ b/index.html
@@ -30,49 +30,49 @@
             </div>
 
             <ul class="lista-de-personagens">
-                <li class="personagem selecionado" id="thor" data-name="Thor">
+                <li class="personagem selecionado" id="ryu" data-name="Ryu">
                     <span class="tag">1P</span>
-                    <img src="./src/imagens/Ryu.png" alt="Personagem Thor">
+                    <img src="./src/imagens/Ryu.png" alt="Personagem Ryu">
                 </li>
 
-                <li class="personagem" id="homem-de-ferro" data-name="Homem de ferro">
+                <li class="personagem" id="bison" data-name="Bison">
                     <span class="tag">1P</span>
-                    <img src="./src/imagens/Bison.png" alt="Personagem Homem de ferro">
+                    <img src="./src/imagens/Bison.png" alt="Bison">
                 </li>
 
-                <li class="personagem" id="viuva-negra" data-name="Viúva Negra">
+                <li class="personagem" id="blanka" data-name="Blanka">
                     <span class="tag">1P</span>
-                    <img src="./src/imagens/Blanka.png" alt="Personagem Viúva Negra">
+                    <img src="./src/imagens/Blanka.png" alt="Personagem Blanka">
                 </li>
 
-                <li class="personagem" id="hulk" data-name="Hulk">
+                <li class="personagem" id="chun-li" data-name="Chun-Li">
                     <span class="tag">1P</span>
-                    <img src="./src/imagens/Chun-Li.png" alt="Personagem Hulk">
+                    <img src="./src/imagens/Chun-Li.png" alt="Personagem Chun-Li">
                 </li>
 
-                <li class="personagem" id="capitao-america" data-name="Capitão América">
+                <li class="personagem" id="dhalsin" data-name="Dhalsin">
                     <span class="tag">1P</span>
-                    <img src="./src/imagens/Dhalsin.png" alt="Personagem Capitão América">
+                    <img src="./src/imagens/Dhalsin.png" alt="Personagem Dhalsin">
                 </li>
 
-                <li class="personagem jogador-2-selecionado" id="ultron" data-name="Ultron">
+                <li class="personagem jogador-2-selecionado" id="Ken" data-name="Ken">
                     <span class="tag">2P</span>
-                    <img src="./src/imagens/Ken.png" alt="Personagem Ultron">
+                    <img src="./src/imagens/Ken.png" alt="Personagem Ken">
                 </li>
 
-                <li class="personagem" id="doutor-doom" data-name="Doutor Doom">
+                <li class="personagem" id="vega" data-name="Vega">
                     <span class="tag">1P</span>
-                    <img src="./src/imagens/Vega.png" alt="Personagem Doutor Doom">
+                    <img src="./src/imagens/Vega.png" alt="Personagem Vega">
                 </li>
 
-                <li class="personagem" id="nova" data-name="Nova">
+                <li class="personagem" id="cammy" data-name="Cammy">
                     <span class="tag">1P</span>
-                    <img src="./src/imagens/Cammy.png" alt="Personagem Nova">
+                    <img src="./src/imagens/Cammy.png" alt="Personagem Cammy">
                 </li>
 
-                <li class="personagem" id="fenix" data-name="Fênix">
+                <li class="personagem" id="zangief" data-name="Zangief">
                     <span class="tag">1P</span>
-                    <img src="./src/imagens/Zangief.png" alt="Personagem Fênix">
+                    <img src="./src/imagens/Zangief.png" alt="Personagem Zangief">
                 </li>
             </ul>
 
@@ -84,5 +84,6 @@
             </div>
         </div>
     </main>
+    <script src="./JS/index.js"></script>
 </body>
 </html>
