--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </header>
         <div class="selecao-de-personagens">
             <div class="personagem-grande personagem-jogador-1">
-                <img src="./src/imagens/Ryu 1.gif.opdownload" alt="Personagem selecionado jogador 1" id="personagem-jogador-1">
+                <img src="./src/imagens/ryu.gif" alt="Personagem selecionado jogador 1" id="personagem-jogador-1">
                 <div class="nome">
-                    <h2>Ryu</h2>
+                    <h2 id="nome-jogador-1">Ryu</h2>
                 </div>
             </div>
 
